# foam-helper

./: Cargo.toml  rustfmt.toml
src/rust/foam-bin/: Cargo.toml
src/rust/foam-bin/src/: main.rs
