[package]
name = "foam"
version = "0.1.0"
authors = ["Alastair Daivis <alaroldai@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.18"
anyhow = "1.0.32"
duct = "0.13.4"
strum = "0.19.2"
strum_macros = "0.19.2"
